--- a/hours.html
+++ b/hours.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <h1>AQUARIUM ZEN</h1>
+        <h1><a href="index.html"> AQUARIUM ZEN</a></h1>
       </div>
       <nav>
         <ul class="nav_Links">
@@ -25,6 +25,15 @@
         <div class="menu-btn__burger"></div>
       </div>
     </header>
+    <div class="mobileNav">
+      <ul>
+        <li><a href="index.html">AQUARIUM ZEN</a></li>
+        <li><a href="products.html">PRODUCTS</a></li>
+        <li><a href="services.html">SERVICES</a></li>
+        <li><a href="Aboutus.html">ABOUT US</a></li>
+        <li><a href="hours.html">HOURS & LOCATION</a></li>
+      </ul>
+    </div>
     <div class="hours-hero">
       <div class="hours-hero-text">
         <h1>HOURS & LOCATION</h1>
@@ -64,5 +73,6 @@
       <p>AQUARIUMZEN@GMAIL.COM</p>
       <p>COPYRIGHT © 2015 AQUARIUM ZEN</p>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
