--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="logo">
-        <h1>AQUARIUM ZEN</h1>
+        <h1><a href="index.html"> AQUARIUM ZEN</a></h1>
       </div>
       <nav>
         <ul class="nav_Links">
@@ -24,15 +24,21 @@
         <div class="menu-btn__burger"></div>
       </div>
     </header>
+    <div class="mobileNav">
+      <ul>
+        <li class="underline"><a href="index.html">AQUARIUM ZEN</a></li>
+        <li><a href="products.html">PRODUCTS</a></li>
+        <li><a href="services.html">SERVICES</a></li>
+        <li><a href="Aboutus.html">ABOUT US</a></li>
+        <li><a href="hours.html">HOURS & LOCATION</a></li>
+      </ul>
+    </div>
     <div class="img-hero">
       <div class="img-hero-text">
         <h1>AQUARIUM ZEN</h1>
         <h2>SEATTLE, WA</h2>
         <p>Tropical Fish Store, Aquatic Plants & Nature Aquarium Supplies</p>
         <p>Seattle's source for aquascaping inspiration</p>
-        <a href="#smooth">
-          <img src="images/icons8-below-64.png" alt="" />
-        </a>
       </div>
     </div>
     <!-- section -->
@@ -197,5 +203,6 @@
       <p>AQUARIUMZEN@GMAIL.COM</p>
       <p>COPYRIGHT © 2015 AQUARIUM ZEN</p>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
