--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <h1>AQUARIUM ZEN</h1>
+        <h1><a href="index.html"> AQUARIUM ZEN</a></h1>
       </div>
       <nav>
         <ul class="nav_Links">
@@ -25,21 +25,25 @@
         <div class="menu-btn__burger"></div>
       </div>
     </header>
+    <div class="mobileNav">
+      <ul>
+        <li><a href="index.html">AQUARIUM ZEN</a></li>
+        <li><a href="products.html">PRODUCTS</a></li>
+        <li><a href="services.html">SERVICES</a></li>
+        <li><a href="Aboutus.html">ABOUT US</a></li>
+        <li><a href="hours.html">HOURS & LOCATION</a></li>
+      </ul>
+    </div>
     <div class="services-img-hero">
       <div class="img-hero-text">
         <h1>DESIGN</h1>
-        <a href="#smooth">
-          <img src="images/icons8-below-64.png" alt="" />
-        </a>
       </div>
     </div>
     <!-- section -->
     <div class="services-first-section" id="smooth">
       <div class="product-content">
         <h1>Design</h1>
-        <p>
-          Aquarium design can be a bewildering process.
-        </p>
+        <p>Aquarium design can be a bewildering process.</p>
         <p>
           Two primary challenges confront the aquarium designer: keeping
           everything alive and healthy while simultaneously making the aquarium
@@ -62,9 +66,7 @@
     <!-- second-section -->
     <div class="second-section">
       <div class="second-inner-content">
-        <h1>
-          ‎Installation
-        </h1>
+        <h1>‎Installation</h1>
         <p>
           For select clients we can install one of our beautifully designed
           Nature Aquariums in the setting of your choosing. We will collaborate
@@ -89,9 +91,7 @@
     </div>
     <!-- third-section -->
     <div class="product-third-section">
-      <h1>
-        Maintenance
-      </h1>
+      <h1>Maintenance</h1>
       <p>
         Aquariums are not static entities: they are constantly growing, shifting
         and changing. In order to keep the aquarium in top form, constant effort
@@ -120,5 +120,6 @@
       <p>AQUARIUMZEN@GMAIL.COM</p>
       <p>COPYRIGHT © 2015 AQUARIUM ZEN</p>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
