--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <h1>AQUARIUM ZEN</h1>
+        <h1><a href="index.html"> AQUARIUM ZEN</a></h1>
       </div>
       <nav>
         <ul class="nav_Links">
@@ -25,12 +25,18 @@
         <div class="menu-btn__burger"></div>
       </div>
     </header>
+    <div class="mobileNav">
+      <ul>
+        <li><a href="index.html">AQUARIUM ZEN</a></li>
+        <li><a href="products.html">PRODUCTS</a></li>
+        <li><a href="services.html">SERVICES</a></li>
+        <li><a href="Aboutus.html">ABOUT US</a></li>
+        <li><a href="hours.html">HOURS & LOCATION</a></li>
+      </ul>
+    </div>
     <div class="products-img-hero">
       <div class="img-hero-text">
         <h1>NATURE AQUARIUM SUPPLIES</h1>
-        <a href="#smooth">
-          <img src="images/icons8-below-64.png" alt="" />
-        </a>
       </div>
     </div>
     <!-- section -->
@@ -126,5 +132,6 @@
       <p>AQUARIUMZEN@GMAIL.COM</p>
       <p>COPYRIGHT © 2015 AQUARIUM ZEN</p>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
